--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "install": "^0.13.0",
     "r": "0.0.5",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.2.0"
   }
 }
